Fixed issue with magnifying glass overflowing to the right border

--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ img {
         background-repeat: no-repeat;
     }
     .magnifier {
-        width: 190px;
-        height: 190px;
+        width: 150px;
+        height: 150px;
     }
     
 }
@@ -123,11 +123,14 @@ img {
         height: 100vh;
     }
     .magnifier {
-        width: 210px;
-        height: 210px;
+        width: 170px;
+        height: 170px;
     }
     .cta {
         width: 40%;
+    }
+    .containerCta {
+        bottom: 10%; 
     }
 }
 
@@ -137,8 +140,8 @@ img {
         height: 100vh;
     }
     .magnifier {
-        width: 240px;
-        height: 240px;
+        width: 220px;
+        height: 220px;
     }
     .cta {
         width: 38%;
